--- a/_scss/style.css
+++ b/_scss/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'open sans'; }
 
 body > nav.desktop > ul > li > a:hover {
@@ -54,8 +53,7 @@ body {
       color: black;
       background-color: rgba(0, 0, 0, 0.5);
       position: absolute;
-      -webkit-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
       top: 50%;
       left: 50%;
       width: 100%;
@@ -137,8 +135,7 @@ body {
       top: 30.8vh;
       display: block;
       left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
       background-color: rgba(0, 0, 0, 0.5); }
   body footer {
     padding-top: 5vh;
@@ -152,7 +149,7 @@ body {
         padding-bottom: 1em;
         max-width: 100%; }
         body footer div form div.mail {
-          margin: 0 0 0 1em; }
+          /*  margin: 0 0 0 1em;*/ }
         body footer div form div button {
           background-color: #B7B7B7;
           border-radius: 10px;
@@ -170,8 +167,7 @@ body {
           padding: 12px 20px;
           display: inline-block;
           border: 1px solid #ccc;
-          -webkit-box-sizing: border-box;
-                  box-sizing: border-box;
+          box-sizing: border-box;
           border-radius: 10px;
           padding: 0.5em; }
       body footer div.someikoner {
@@ -240,8 +236,7 @@ body {
               /*Tillader placering af knapper oven på billeder*/
               outline: none;
               /*Fjerner markering af knappen ved klik*/
-              -webkit-transform: translate(0%, -50%);
-                      transform: translate(0%, -50%);
+              transform: translate(0%, -50%);
               /*Justeringer i forhold til centrum på y-aksen*/
               top: 50%;
               /*Placér midt på billedets y-akse*/ }
@@ -251,8 +246,7 @@ body {
               /*Afstanden fra højre kant af kassen skal være 0*/ }
           body main.whitepower div article .miniatures {
             /*Miniaturer under det store billede i galleriet*/
-            -webkit-columns: 3;
-                    columns: 3;
+            columns: 3;
             /*3 miniaturer ved siden af hinanden*/
             width: 100%;
             margin: 0.5em 0 0 0;
@@ -305,7 +299,6 @@ body {
       left: 0;
       display: block;
       background: white;
-      -webkit-transition: .5s;
       transition: .5s; }
     body input + label span:first-child {
       top: 20%; }
@@ -318,12 +311,10 @@ body {
     top: 50%; }
   body input:checked + label span:first-child {
     opacity: 1;
-    -webkit-transform: rotate(225deg);
-            transform: rotate(225deg); }
+    transform: rotate(225deg); }
   body input:checked + label span:last-child {
     opacity: 1;
-    -webkit-transform: rotate(-225deg);
-            transform: rotate(-225deg); }
+    transform: rotate(-225deg); }
   body input ~ nav.mobil {
     background: black;
     position: fixed;
@@ -332,7 +323,6 @@ body {
     width: 100%;
     /*  height: 3.5em;*/
     height: 0.001vh;
-    -webkit-transition: .5s;
     transition: .5s;
     /*  transition-delay: .5s; Hvorfor?*/
     z-index: 14;
@@ -346,10 +336,8 @@ body {
       display: none; }
       body input ~ nav.mobil > ul > li {
         opacity: 0;
-        -webkit-transition: .5s;
         transition: .5s;
-        -webkit-transition-delay: 0s;
-                transition-delay: 0s; }
+        transition-delay: 0s; }
         body input ~ nav.mobil > ul > li > a {
           font-family: Open Sans;
           text-decoration: none;
@@ -362,14 +350,12 @@ body {
             color: #FFBC37; }
   body input:checked ~ nav {
     height: 100%;
-    -webkit-transition-delay: 0s;
-            transition-delay: 0s; }
+    transition-delay: 0s; }
     body input:checked ~ nav > ul {
       display: block; }
       body input:checked ~ nav > ul > li {
         opacity: 1;
-        -webkit-transition-delay: .5s;
-                transition-delay: .5s; }
+        transition-delay: .5s; }
 
 /*Michelle start*/
 #toppic {
@@ -463,21 +449,14 @@ a:link {
 
 /* Flexbox */
 .gallery {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   position: relative;
   width: 100%; }
 
 .galleryitem {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 20em;
-          flex: 1 0 20em;
+  flex: 1 0 20em;
   max-width: 100%;
   margin: 1rem;
   margin-top: 0; }
@@ -530,6 +509,9 @@ img.gaffel {
 .mobilbanner {
   display: block; }
 
+@media screen and (max-width: 1049px) and (orientation: landscape) {
+  nav.mobil ul {
+    columns: 2; } }
 @media screen and (min-width: 1050px) {
   .desktopbanner {
     display: block; }
@@ -567,8 +549,7 @@ img.gaffel {
     display: block;
     max-width: 5%;
     float: left;
-    -webkit-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
     margin-top: 9em; }
   body div.mobilindexbillede {
     display: none; }
@@ -590,8 +571,7 @@ img.gaffel {
       color: black;
       background-color: rgba(0, 0, 0, 0.5);
       position: absolute;
-      -webkit-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
       top: 50%;
       left: 50%;
       width: 100%;
@@ -600,15 +580,9 @@ img.gaffel {
     max-width: 85%;
     background-color: white; }
     body main.nicolai div.ydelsesikoner {
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
-      -webkit-box-align: baseline;
-          -ms-flex-align: baseline;
-              align-items: baseline;
+      justify-content: space-between;
+      align-items: baseline;
       margin-top: 6em; }
       body main.nicolai div.ydelsesikoner figure {
         max-width: 30%;
@@ -652,12 +626,8 @@ img.gaffel {
         font-size: 2em;
         margin-bottom: 0; }
       body main.nicolai div.reviewdiv div.reviews {
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        justify-content: space-between;
         max-width: 80%;
         margin: 0 auto; }
         body main.nicolai div.reviewdiv div.reviews div.review {
@@ -744,11 +714,8 @@ img.gaffel {
             body nav.desktop ul li a.current {
               color: #FFBC37; }
     body footer {
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -ms-flex-pack: distribute;
-          justify-content: space-around; }
+      justify-content: space-around; }
       body footer div {
         display: inline-block;
         display: inline-block; }
@@ -763,11 +730,8 @@ img.gaffel {
         body footer div.kontaktinfo {
           width: 50%;
           padding-top: 1em;
-          display: -webkit-box;
-          display: -ms-flexbox;
           display: flex;
-          -ms-flex-pack: distribute;
-              justify-content: space-around;
+          justify-content: space-around;
           border-left: 1px solid white;
           border-right: 1px solid white;
           padding-bottom: 0.1em;
@@ -777,16 +741,9 @@ img.gaffel {
           margin-top: 0.8em; }
 
   body main.whitepower div div.grid {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: space-between;
+    flex-direction: column;
     margin: 0 0 0 0.2em; }
     body main.whitepower div div.grid div.billederher {
       display: block;
@@ -808,3 +765,5 @@ img.gaffel {
 @media screen and (min-width: 700px) {
   body > main > div.velkommentekst > h4 {
     font-size: 2.19em; } }
+
+/*# sourceMappingURL=style.css.map */
