--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,8 @@ body {
               /*Justeringer i forhold til centrum på y-aksen*/
               top: 50%;
               /*Placér midt på billedets y-akse*/ }
+              body main.whitepower div article .galleri button:hover {
+                color: #FFBC37; }
             body main.whitepower div article .galleri .w3-display-right {
               /*Knap til at vise næste billede i slideshow*/
               right: 0;
@@ -423,20 +425,22 @@ article.michelle-indhold {
 .centertext {
   text-align: center; }
 
-body main.whitepower div.videoWrapper {
+body main.whitepower div .interview {
+  margin: 2em auto;
+  padding-top: 0; }
+body main.whitepower div .videoWrapper {
   /*Så den embeddede video fylder hele bredden med det rigtige h/b-forhold*/
   position: relative;
   padding-bottom: 56.25%;
   /* 16:9 */
   height: 0;
   margin-top: 0; }
-
-.videoWrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
+  body main.whitepower div .videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
 
 /* Link books */
 .buylink {
@@ -444,26 +448,29 @@ body main.whitepower div.videoWrapper {
   color: black;
   background-color: #FFBC37;
   border-radius: 25px;
-  padding: 0.7em;
-  padding-left: 1em;
-  padding-right: 1em; }
+  padding: 0.7em 1em;
+  margin-top: 1em;
+  display: inline-block;
+  /*så den ikke klipper ind i p*/ }
 
 a:link {
   text-decoration: none; }
 
 /* Flexbox */
-.gallery {
+body main.whitepower .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
-  width: 100%; }
+  width: 100%;
+  margin-top: 0.3em; }
 
 .galleryitem {
   flex: 1 0 20em;
   max-width: 100%;
   margin: 1rem;
-  margin-top: 0; }
+  margin-top: 0;
+  margin-bottom: 2em; }
 
 .galleryitem img {
   display: block;
@@ -485,7 +492,6 @@ a:link {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1.8rem;
   line-height: 1.5em;
   max-width: 438px; }
 
