--- a/css/style.css
+++ b/css/style.css
@@ -519,10 +519,10 @@ img.gaffel {
 .mobilbanner {
   display: block; }
 
-@media screen and (max-width: 1049px) and (orientation: landscape) {
+@media screen and (max-width: 1059px) and (orientation: landscape) {
   nav.mobil ul {
     columns: 2; } }
-@media screen and (min-width: 1050px) {
+@media screen and (min-width: 1060px) {
   .desktopbanner {
     display: block; }
 
@@ -710,7 +710,8 @@ img.gaffel {
         padding: 0;
         width: 65%;
         float: right;
-        margin-bottom: 0; }
+        margin-bottom: 0;
+        margin-right: 2%; }
         body nav.desktop ul li {
           float: right;
           padding-left: 0.8em;
