--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,6 @@ body {
               /*Justeringer i forhold til centrum på y-aksen*/
               top: 50%;
               /*Placér midt på billedets y-akse*/ }
-              body main.whitepower div article .galleri button:hover {
-                color: #FFBC37; }
             body main.whitepower div article .galleri .w3-display-right {
               /*Knap til at vise næste billede i slideshow*/
               right: 0;
@@ -520,10 +518,10 @@ img.gaffel {
 .mobilbanner {
   display: block; }
 
-@media screen and (max-width: 1059px) and (orientation: landscape) {
+@media screen and (max-width: 1075px) and (orientation: landscape) {
   nav.mobil ul {
     columns: 2; } }
-@media screen and (min-width: 1060px) {
+@media screen and (min-width: 1076px) {
   .desktopbanner {
     display: block; }
 
@@ -684,6 +682,8 @@ img.gaffel {
             /*Størrelse på pilen*/
             padding: 0.3em 0.1em;
             /*Pilens kasse*/ }
+          body main.whitepower div article .galleri :hover {
+            color: #FFBC37; }
     body input {
       display: none; }
     body label {
