--- a/css/style.css
+++ b/css/style.css
@@ -158,14 +158,12 @@ body {
           background-color: #B7B7B7;
           border-radius: 10px;
           padding: 0.5em; }
-        body footer div form div a {
-          text-decoration: none; }
-          body footer div form div a h3 {
-            margin-bottom: 0.1em;
-            margin-top: 0;
-            font-family: 'open sans';
-            color: white;
-            font-size: 1em; }
+        body footer div form div h3 {
+          margin-bottom: 0.1em;
+          margin-top: 0;
+          font-family: 'open sans';
+          color: white;
+          font-size: 1em; }
         body footer div form div input[type=text] {
           width: 70%;
           padding: 12px 20px;
