--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -5,7 +5,7 @@ $backgroundColor: white;
 
 *{
   box-sizing: border-box;
-  font-family: 'open sans';
+  font-family: 'open sans', sans-serif;
 }
 
 body{
@@ -126,7 +126,7 @@ body{
             font-size: 2em;
             margin-top: 0;
             margin-bottom: 0;
-            font-family: 'Playfair display';
+            font-family: 'Playfair display', serif;
           }
           figcaption{
             color: $textColor;
@@ -139,7 +139,7 @@ body{
           color: $textColor;
           font-size: 1.5em;
           margin-bottom: 0.5em;
-          font-family: 'Playfair display';
+          font-family: 'Playfair display', serif;
         }
         p{
           color: $textColor;
@@ -163,7 +163,7 @@ body{
           color: $textColor;
           font-size: 2em;
           margin-bottom: 0;
-          font-family: 'Playfair display';
+          font-family: 'Playfair display', serif;
         }
         div.reviews{
           div.review{
@@ -243,7 +243,7 @@ body {
             h3{
               margin-bottom: 0.1em;
               margin-top: 0;
-              font-family: 'open sans';
+              font-family: 'open sans', sans-serif;
               color: white;
               font-size: 1em;
           }
@@ -309,7 +309,7 @@ body {
             font-size: 1.8em;
             margin-top: 0.5em;
             margin-bottom: 0.5em;
-            font-family: 'Playfair display';
+            font-family: 'Playfair display', serif;
           }
 
           h3 {
@@ -366,7 +366,7 @@ body {
       &.navn{
         text-decoration: none;
         color: white;
-        font-family: 'Playfair Display';
+        font-family: 'Playfair Display', serif;
         padding-left: 1%;
         padding-top: 0.3em;
         clear: both;
@@ -464,7 +464,7 @@ body {
           transition: .5s;
           transition-delay: 0s;
           > a {
-            font-family: Open Sans;
+            font-family: 'Open Sans', sans-serif;
             text-decoration: none;
             text-transform: uppercase;
             color: white;
@@ -512,7 +512,7 @@ article.michelle-indhold{
   font-size: 1.8em;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
-  font-family: 'Playfair Display';
+  font-family: 'Playfair Display', serif;
 }
 p{
   color: black;
@@ -566,7 +566,7 @@ margin-top: 0.3em;
 
 .omos {
     font-size: 2.2em;
-    font-family: 'playfair display';
+    font-family: 'playfair display', serif;
     }
 
     .centertext{
@@ -645,7 +645,7 @@ body main.whitepower .gallery {
 
 .galleryitem figcaption {
   color: black;
-  font: 'open sans';
+  font-family: 'open sans', sans-serif;
   padding: .3em 0;
   text-align: center;
   padding-top: 1em;
@@ -948,7 +948,7 @@ body{
         &.navn{
           text-decoration: none;
           color: white;
-          font-family: 'Playfair Display';
+          font-family: 'Playfair Display', serif;
           padding-left: 2%;
           padding-top: 0.5%;
           clear: both;
@@ -975,7 +975,7 @@ body{
           a{
             text-decoration: none;
             color: white;
-            font-family: Open Sans;
+            font-family: 'Open Sans', sans-serif;
             font-size: 1.1em;
             &.current{
               color: $accentColor;
