--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 * {
   box-sizing: border-box;
-  font-family: 'open sans'; }
+  font-family: 'open sans', sans-serif; }
 
 body footer div.kontaktinfo div {
   text-align: center; }
@@ -81,7 +81,7 @@ body {
         font-size: 2em;
         margin-top: 0;
         margin-bottom: 0;
-        font-family: 'Playfair display'; }
+        font-family: 'Playfair display', serif; }
       body main.nicolai div.ydelsesikoner figure figcaption {
         color: black; }
     body main.nicolai div.norreport {
@@ -90,7 +90,7 @@ body {
         color: black;
         font-size: 1.5em;
         margin-bottom: 0.5em;
-        font-family: 'Playfair display'; }
+        font-family: 'Playfair display', serif; }
       body main.nicolai div.norreport p {
         color: black; }
     body main.nicolai div.reviewdiv {
@@ -106,7 +106,7 @@ body {
         color: black;
         font-size: 2em;
         margin-bottom: 0;
-        font-family: 'Playfair display'; }
+        font-family: 'Playfair display', serif; }
       body main.nicolai div.reviewdiv div.reviews div.review h2.gås {
         color: #FFBC37;
         font-family: arial, sans-serif;
@@ -161,7 +161,7 @@ body {
         body footer div form div h3 {
           margin-bottom: 0.1em;
           margin-top: 0;
-          font-family: 'open sans';
+          font-family: 'open sans', sans-serif;
           color: white;
           font-size: 1em; }
         body footer div form div input[type=text] {
@@ -209,7 +209,7 @@ body {
             font-size: 1.8em;
             margin-top: 0.5em;
             margin-bottom: 0.5em;
-            font-family: 'Playfair display'; }
+            font-family: 'Playfair display', serif; }
           body main.whitepower div article h3 {
             font-size: 1.1em;
             font-style: italic;
@@ -262,7 +262,7 @@ body {
   body nav a.navn {
     text-decoration: none;
     color: white;
-    font-family: 'Playfair Display';
+    font-family: 'Playfair Display', serif;
     padding-left: 1%;
     padding-top: 0.3em;
     clear: both;
@@ -341,7 +341,7 @@ body {
         transition: .5s;
         transition-delay: 0s; }
         body input ~ nav.mobil > ul > li > a {
-          font-family: Open Sans;
+          font-family: 'Open Sans', sans-serif;
           text-decoration: none;
           text-transform: uppercase;
           color: white;
@@ -375,7 +375,7 @@ article.michelle-indhold {
     font-size: 1.8em;
     margin-bottom: 0.5em;
     margin-top: 0.5em;
-    font-family: 'Playfair Display'; }
+    font-family: 'Playfair Display', serif; }
   article.michelle-indhold p {
     color: black;
     margin: 0;
@@ -416,7 +416,7 @@ article.michelle-indhold {
 
 .omos {
   font-size: 2.2em;
-  font-family: 'playfair display'; }
+  font-family: 'playfair display', serif; }
 
 .centertext {
   text-align: center; }
@@ -480,7 +480,7 @@ body main.whitepower .gallery {
 
 .galleryitem figcaption {
   color: black;
-  font: 'open sans';
+  font-family: 'open sans', sans-serif;
   padding: .3em 0;
   text-align: center;
   padding-top: 1em; }
@@ -704,7 +704,7 @@ img.gaffel {
       body nav.desktop a.navn {
         text-decoration: none;
         color: white;
-        font-family: 'Playfair Display';
+        font-family: 'Playfair Display', serif;
         padding-left: 2%;
         padding-top: 0.5%;
         clear: both;
@@ -728,7 +728,7 @@ img.gaffel {
           body nav.desktop ul li a {
             text-decoration: none;
             color: white;
-            font-family: Open Sans;
+            font-family: 'Open Sans', sans-serif;
             font-size: 1.1em; }
             body nav.desktop ul li a.current {
               color: #FFBC37; }
